--- a/ukb_preprocessing/Preprocessing/05c Blood_Visual.Rmd
+++ b/ukb_preprocessing/Preprocessing/05c Blood_Visual.Rmd
@@ -16,13 +16,17 @@ source("../config.R") #Loads libraries, variables and global function
 2. R Detects your Microsoft / Apple/ Linux username (could result in conflicts with same name)
 3. Assign your own variables to global variables
 ```{r}
+
+# IOIs <-c("C240", "C241", "C248", "C249")
+# IOI <- "C240"
+# DOI <- "eCCa"
 export_filename = paste("Blood", DOI)
 date = format(Sys.time(), " %Y-%m-%d")
 control <- toupper(risk_constellation)
 dir.create(file.path(project_path, "/Blood Visuals"), showWarnings = FALSE)
 path <- paste(project_path, "/Blood Visuals/", sep="")
 date_out = format(Sys.time(), " %Y-%m-%d")        
-file.out <- paste("Blood ", DOI, " vs ", control, "_female", sep="")  #file.out = Substring for the output file name.
+file.out <- paste("Blood ", DOI, " vs ", control, sep="")  #file.out = Substring for the output file name.
 fact <- "mets" 
 output_format <- "SVG"  #either "SVG" or "PNG"
 
@@ -141,7 +145,7 @@ df_blood <- setnames(df_blood, old=Blood_Marker_Index$Description, new = Blood_M
 
 summary(df_blood[,1:5])
 
-#save(df_blood, file=paste(project_path, "/data/dataframes/df_blood.RData", sep='')) # Save df_blood as .RData (preserves column classes)
+save(df_blood, file=paste(project_path, "/data/dataframes/df_blood.RData", sep='')) # Save df_blood as .RData (preserves column classes)
 
 
 
@@ -261,371 +265,6 @@ YLIM
 ```{r}
 
 #################################################### 2. Import datasets ################################################
-symlog <- function(x, base = exp(1)) {
-  sign(x) * log1p(abs(x)) / log(base)
-}
-
-inv_symlog <- function(x, base = exp(1)) {
-  sign(x) * (exp(abs(x) * log(base)) - 1)
-}
-#Using the objects define above, we now call the datasource with SAS output to create datasub.
-
-#We exponentiate Estimate to create RR.
-#We then create RR_1<-RR if RR< 1 (i.e. those with negative associations), else RR_1<-1.
-#We also then create RR_2<-RR if RR>1 (i.e. those with positive associations), else RR_2<-1.
-
-datasub <<- table_circleplot
-
-# 1.
-datasub$RR <- exp(datasub$Estimate)
-
-# 2.
-datasub$RR_1 <- datasub$RR
-datasub$RR_1[datasub$RR>1] <- 1
-
-# 3.
-datasub$RR_2 <- datasub$RR
-datasub$RR_2[datasub$RR<1] <- 1
-
-
-#########################################  3. Adjusting p-values #############################################
-
-# 1. From SAS output now imported into datasub, estimate p-values from chisq statistics datasub$RawP.
-# 2. Using the false discovery rate adjustment by Benjamini & Hochberg, p.adjust estimates adjusted p-values datasub$AdjP.
-# 3. Then, adds flags for the metabolites with evidence against the null hypothesis bellow the fdr-adjusted “significance level”.
-# 4. We then create new vectors for estimates that are significant (suffix = _s). 
-#    NB, suffix _1 is used for estimates with negative associations and suffix _2 for estimates 
-#    with positive associations. We will add colours later (red for positive and blue for negative, darker shade for those below the significance threshold).
-# 5. If flagged as “non-significant” then newly created vectors are transformed into 1 (the value for the null hypothesis).
-# 6. If flagged as “significant” then original vectors are transformed into 1 (the value for the null hypothesis).
-# 7. Estimates the number of metabolites based on de dimension of the dataset, necessary later.
-
-#1. (datasub$RawP <- pchisq(datasub$WaldChiSq, 1, lower.tail=FALSE)) -> Only necessary when input != p-value but WaldChiSquare (for categorical variables)
-
-#2.
-datasub$AdjP <- p.adjust(datasub$p.value, method = "fdr")
-
-# 3.
-datasub$Sig<-NA
-datasub$Sig[datasub$AdjP< 0.05] <- 1
-datasub$Sig[datasub$AdjP>= 0.05] <- 0
-
-# 4. 
-datasub$RR_1_s <- datasub$RR_1
-datasub$RR_2_s <- datasub$RR_2
-
-# 5. 
-datasub$RR_1_s[datasub$Sig==0] <- 1
-datasub$RR_2_s[datasub$Sig==0] <- 1
-
-# 6.
-datasub$RR_1[datasub$Sig==1] <- 1
-datasub$RR_2[datasub$Sig==1] <- 1
-
-# 7.
-len.data <<-  as.numeric(dim(datasub)[1])
-
-
-datasub$color <- ifelse(datasub$Estimate > 0, 
-                        ifelse(datasub$Sig == 1, "#CC0000CC", "#CC000040"), 
-                        ifelse(datasub$Sig == 1, "#0066CCCC", "#0066CC40"))
-
-
-datasub$Estimate_transformed <- symlog(datasub$Estimate, threshold)
-
-########################################  4. Plotting parameters ###########################################################
-
-# In this section we input the parameters for the plotting areas and steps are taken to keep proportions. Importantly, the measures to keep proportionality could be substantially improved.
-
-#### Y-axis ####
-
-# 1. YLIM YCUTS and YCUTS.LABS define the Y-axis. Parameters here are defined manually but could be automated by extracting MIN and MAX 
-#    and using the pretty function to define cuts and labels.
-# 2. Alternatively, one could define labels as percentage instead of relative risks, if desired.
-# 3. ylab 1:3 define the levels for labels around the circular plot that are relative and proportional to the MAX and MIN of the axis.
-# 4. If estimate is off limits from YLIM then estimates are trimmed. Currently, the plot doesn’t flag this transformation, 
-#    although it should be evident as the bar ends precisely at the limit of the axis and user should be aware as the axis limits are currently defined manually.
-
-#Log_scale <- read_excel("C:/Users/Jan/OneDrive/Dokumente/PostDoc/Figures/Circle Plots/Log scale.xlsx")
-
-# Alternativ: 0.6, 1.7 cuts= 0.6, 0.75, 1, 1.3, 1.7
-YLIM <- c(symlog(-100, threshold), symlog(100, threshold))
-
-# Define the ticks and labels for the y-axis
-YCUTS <- symlog(c(-100, -10, -1, 0, 1, 10, 100), threshold)
-YCUTS.LABS <- c("-100", "-10", "-1", "0", "1", "10", "100")
-
-#"zooming out"
-#YLIM <- c(log(0.4), log(2.4))
-#YCUTS <- c(log(0.4), log(0.6), log(1), log(1.67), log(2.4))
-#YCUTS.LABS <- as.character(exp(YCUTS))
-#YMAX <- exp(max(YLIM))
-#YMIN <- exp(min(YLIM))
-
-# 2.
-#YCUTS.LABS <- c("-40%", "-20%", "0%", "30%", "60%")
-#Change the parameters for varying y-position of labels (ylab3 = outer, 2 = medium (LDL etc), 1 = XXl, XL etc)
-# 3.
-
-# Adjust Values to Fit Within YLIM
-ADJ <- 0.01
-datasub$RR_1[datasub$RR_1 <= YMIN] <- YMIN + (YMAX - YMIN) * ADJ
-datasub$RR_2[datasub$RR_2 >= YMAX] <- YMAX - (YMAX - YMIN) * ADJ
-datasub$RR_1_s[datasub$RR_1_s <= YMIN] <- YMIN + (YMAX - YMIN) * ADJ
-datasub$RR_2_s[datasub$RR_2_s >= YMAX] <- YMAX - (YMAX - YMIN) * ADJ
-#datasub$Estimate[datasub$Estimate <= log(YMIN)] <- log(YMIN) + (log(YMAX) - log(YMIN)) * ADJ
-#datasub$Estimate[datasub$Estimate >= log(YMAX)] <- log(YMAX) - (log(YMAX) - log(YMIN)) * ADJ
-
-
-#### X-axis ####
-
-# IMPORTANT the x-axis is defined by the number of metabolic biomarkers. This number is currently 139 derived from id_name_s. 
-# All the labels are mapped around this number, and in this especific order. 
-# If the user decides a different array of biomarkers is needed (i.e. only include lipids, or by lipid types instead of by lipoprotein sizes), 
-# then this change can only currently be implemented in SAS and the mapping for labels should also be changed manually.
-
-XLIM <- c(min(as.numeric(datasub$id_name_s)), max(as.numeric(datasub$id_name_s)))
-
-#### Labels ####
-
-# labs1 Contains the lipoprotein subclass size acronyms. This is repeated 7 times, once per each measurement of interest (i.e. lipoprotein particle number, cholesterol, free cholesterol, esterified cholesterol, triglycerides, phospholipids, and total lipids).
-# labs4 Vector with additional labels for the rest of biomarkers besides lipids within lipoproteins.
-# CEX states a vector to use for sizing. If user changes CEX (with upper case), then all those functions using CEX will be proportionally re-sized.
-# NOTE if the user changes the array defining id_name_s, then this section should be changed accordingly.
-
-labs1 <- Blood_Marker_Index$Short_name
-
-
-
-#### Graphic device ####
-# We decided to use the png graphic device, but others such as pdf or tiff do the trick as well.
-# 1. The line we would use produces a filename that includes the file.out substring defined above as well as GROUP and the date.
-# 2. For this document, we have named the output file "foo.png".
-setwd(path)
-
-
-# 1.
-if (output_format == "PNG") {
-  png(paste(path, file.out, date, ".png", sep=""), height=6000, width=6000, bg = "white")
-  CEX <- 9
-  lwd <- 1.5
-} else if (output_format == "SVG") {
-  svg(paste(path, file.out, date, ".svg", sep=""), width = 40, height = 40, pointsize = 12, bg="transparent")
-  CEX <- 2.3
-  lwd <- 1
-}
-
-
-
- #png(filename = "test2.png", height=6000, width=6000, bg = "white")
-
-
-
-
-#### Margins ####
-# The outer margins OMA are quite large (53 spaces, in the 4 margins), as we need space to place our labels.
-
-par(xpd = NA, oma = rep(60,4))
-
-
-
-
-
-
-#####################################################  Circos function ###########################################################
-
-# This represents the core of the script, although most of the job is done above. It uses the circlize package but, as you will see, most of the basic R plot functions are preserved and only slightly changed.
-
-# Importantly, this plot uses only very limitedly the applications of the circlize package. Some of the approaches I have had to make the plot are probably clumsy or redundant.
-
-# I highly recommend to have a quick look into the documentation (https://jokergoo.github.io/circlize_book/book/). It is simpler than it looks and relatively easy to work with.
-
-
-##### Parameters #####
-
-# Circlize transforms a “Cartesian plane” with x and y axis into a circle of y radius and x circumference. 
-# Basically, a traditional rectangular plot is twisted into a donut. The donut is called sector. Sectors can be split in several tracks. 
-# You can add additional sectors or donuts in ever more central levels.
-
-# Our example only has 1 sector with 1 track.
-# track.height determines the proportion of the radius of the circle the track (where we are going to plot) is going to use. 
-# The circle used by circlize always has a radius of 1, so a height of 0.1 means 10% of the circle radius.
-# gap.degree determines the space between the end of the track and the start of the track.
-# start.degree determines the place to start the track at in degrees (count starts at the West).
-
-circos.par("track.height" = 0.6, 
-           cell.padding = c(0, 0, 0, 0),
-           gap.degree = 90,
-           start.degree = 91,
-           unit.circle.segments=50000,
-           points.overflow.warning=FALSE)
-
-##### Initialize the circle #####
-
-# circos.initialize is the core function that determines the basic parameters. I am still not entirely sure how it works. 
-# However, a character object in the factors option (in this example fact) does the trick and this becomes the name of our sector.
-# xlim is defined by the length of the id_name_s column, as noted above.
-
-# 1.
-circos.initialize(factors = fact, xlim = c(0,len.data))
-
-# 2.
-circos.track(factors = fact, ylim = YLIM, bg.border = NA)
-
-##### Draw shades for metabolic subgroups ##### ############################ Eventually to be changed due to addition of 4 markers
-
-# To highlight specific regions use circlize() to calculate the positions in the polar coordinate. Always keep in mind that x-axis in the cell are always clock wise.
-# The highlight region to be calculated by circlize()needs coordinates in x and y, a sector.index (in this case "mets"), and a track.index (in this case 1).
-# NOTE: In this example, the coordinates were imputed manually and correspond to the array defined by id_names_s. If changed, this section must also be changed to preserve meaningful highlight regions.
-# Unless the user wants to change the order of the biomarkers, this section needs no further details explained.
-
-pos1 = circlize(c(0.5, 4.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos1[1, "theta"], pos1[2, "theta"], pos1[1, "rou"], pos1[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA) 
-
-pos2 = circlize(c(8.5, 11.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos2[1, "theta"], pos2[2, "theta"], pos2[1, "rou"], pos2[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-pos3 = circlize(c(14.5, 20.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos3[1, "theta"], pos3[2, "theta"], pos3[1, "rou"], pos3[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-pos4 = circlize(c(24.5, 31.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos4[1, "theta"], pos4[2, "theta"], pos4[1, "rou"], pos4[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-pos5 = circlize(c(37.5, 42.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos5[1, "theta"], pos5[2, "theta"], pos5[1, "rou"], pos5[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-pos6 = circlize(c(46.5, 50.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos6[1, "theta"], pos6[2, "theta"], pos6[1, "rou"], pos6[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-
-pos7 = circlize(c(53.5, 57.5), c(min(YLIM), max(YLIM)), sector.index = "mets", track.index = 1)
-draw.sector(pos7[1, "theta"], pos7[2, "theta"], pos7[1, "rou"], pos7[2, "rou"], clock.wise = TRUE, col = "#CCCCCC56", border = NA)
-
-
-
-
-##### Plotting region #####
-
-# 1. Using circos.track, we select track 1, using factors defined in object fact, and the YLIM defined above.
-# 2. We use circos.segmets exactly as segments would be used to create:
-  # I. Start and end of plot lines.
-  # II. Outer and inner lines.
-  # III.Lines at null hypothesis and other cuts.
-
-# 1.
-circos.track(track.index = 1, bg.border = "white", factors = fact, ylim = YLIM, panel.fun = function(x,y){
-  
-  # i)
-  # Start 
-  circos.segments(x0=min(XLIM)-0.5, y0=max(YLIM), x1=min(XLIM)-0.5, y1=min(YLIM), col = "black", lwd=lwd)
-  # End 
-  circos.segments(x0=max(XLIM)+0.5, y0=max(YLIM), x1=max(XLIM)+0.5, y1=min(YLIM), col = "black", lwd=lwd)
-  
-  # ii)
-  # Outer
-  circos.segments(x0=min(XLIM)-.75, y0=max(YLIM), x1=max(XLIM)+0.5, y1=max(YLIM), col = "black", lwd=lwd)
-  # Inner
-  circos.segments(x0=min(XLIM)-.75, y0=min(YLIM), x1=max(XLIM)+0.5, y1=min(YLIM), col = "black", lwd=lwd)
-  
-  # iii)
-  # Lines at YCUTS
-  # Null Hypothesis
-  circos.segments(x0=min(XLIM)-.75, y0=0, x1=max(XLIM)+0.5, y1=0, col = "black", lwd=lwd)
-  circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[2]), x1=max(XLIM)+0.5, y1=(YCUTS[2]), col = "gray75", lwd=lwd)
-  circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[4]), x1=max(XLIM)+0.5, y1=(YCUTS[4]), col = "gray75", lwd=lwd)
-  #circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[5]), x1=max(XLIM)+0.5, y1=(YCUTS[5]), col = "gray75", lwd=lwd)
-  #circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[6]), x1=max(XLIM)+0.5, y1=(YCUTS[6]), col = "gray75", lwd=lwd)
-  
-  
-  
-#### Draw bars with estimates ####
-  
-  # circos.rect draws a rectangle of xleft, xright, ytop, and ybottom dimentions.
-  
-  # Each bar is defined in the x axis by its position withing is_name_s. Width is defined by simply substracting or adding 0.35 to the coordinates in xleft and xright, respectively.
-  
-  # Each bar of the 4 types of bars are defined in the y axis by the value in one of the four RR vectors created above, based on the following:
-    
-    # 1. Positive and “significant”, in dark red (i.e. RR_2_s).
-    # 2. Positive and not “significant”, in light red (i.e. RR_2).
-    # 3. Negative and “significant”, in dark blue (i.e. RR_1_s).
-    # 4. Negative and “non-significant”, in light blue (i.e. RR_1).
-  
-  # Colours are defined in hex with the last 2 digits defining transparency.
-
-  # Bars
-  # 1.
-circos.rect(xleft = (as.numeric(datasub$id_name_s) - .35), 
-              xright = (as.numeric(datasub$id_name_s) + .35), 
-              ytop = datasub$Estimate_transformed, 
-              ybottom = symlog(1, base = 10), 
-              col = datasub$color, 
-              lwd = lwd)
-
-  circos.rect(
-    xleft = as.numeric(datasub$id_name_s),
-    xright = as.numeric(datasub$id_name_s),
-    ytop = pmin(datasub$Estimate_transformed + 1.95 * sem(datasub$Estimate_transformed), max(YLIM)),
-    ybottom = pmax(datasub$Estimate_transformed - 1.95 * sem(datasub$Estimate_transformed), min(YLIM)),
-    col = "#262626",
-    lwd = lwd
-  )
-
-  circos.points(x=as.numeric(datasub$id_name_s[datasub$Sig == 1]), y=log(ylab0), pch = 42, col = "#000000", cex = CEX*1.0) #### Display significance stars ####
-  
-  #### Draw y-axis ####
-  # Similar to basic R plotting axis options.
-  
-  circos.yaxis(at=YCUTS, labels = YCUTS.LABS, labels.cex = CEX*1, tick = FALSE, col = "white")
-  
-#### Draw labels ####
-  # We use the function circos.text to paste the labels at the margins of the plot (remember we left a lot of space at the margins when defining the plot par above).
-  
-  # The option facing defines how to paste the labels. The package has several options that make text look nicely, including niceFacing, which makes text flip so it can be read easily.
-  
-  # The positions for labels are, unfortunately, very inefficiently defined manually.
-  
-  # All the .shift objects were used to manually adjust the labels. These work now, but maybe play with them to see how the labels move.
-  
-  
-  VLDL.shift <- 2 
-  LDL.shift <- 1.5
-  HDL.shift <- 1.5
-  
-  ylab3_size <- 0.9
-  ylab2_size <- 0.9
-  ylab1_size <- 0.8
-  
-
-  
-  #Inner Labels
-  circos.text(x=c(1:62)+0.25,   y = log(ylab1), labels = labs1, facing = "clockwise", niceFacing = TRUE, cex = CEX*ylab1_size, adj = 0, font = 1)
-  
-}
-
-)
-
-
-#### Title ####
- 
-
-text(0, 0, paste(control, "\n±\n", DOI, sep=""), cex = CEX*1.5, font=2)
-dev.off()  # Close the plotting device with dev.off().
-circos.clear()   # Use circos.clear to reset the circular layout parameters.
-
-
-
-############################################################### 6. Output ###################################################
-
-#png()
-
-## 2
-```
-
-
-
-```{r}
-#################################################### 2. Import datasets ################################################
 
 #Using the objects define above, we now call the datasource with SAS output to create datasub.
 
@@ -703,11 +342,11 @@ len.data <<-  as.numeric(dim(datasub)[1])
 #Log_scale <- read_excel("C:/Users/Jan/OneDrive/Dokumente/PostDoc/Figures/Circle Plots/Log scale.xlsx")
 
 # Alternativ: 0.6, 1.7 cuts= 0.6, 0.75, 1, 1.3, 1.7
-YLIM <- c(-10, 10)
-YCUTS <- c(-10, -5, 0, 5, 10)
-YCUTS.LABS <- as.character(YCUTS)
-YMAX <- max(YLIM)
-YMIN <- min(YLIM)
+YLIM <- c(log(0.01), log(100))
+YCUTS <- c(log(0.01), log(0.1), log(1), log(10), log(100))
+YCUTS.LABS <- as.character(exp(YCUTS))
+YMAX <- exp(max(YLIM))
+YMIN <- exp(min(YLIM))
 
 #"zooming out"
 #YLIM <- c(log(0.4), log(2.4))
@@ -738,6 +377,7 @@ datasub$RR_2_s[datasub$RR_2_s>=YMAX] <- YMAX-YMAX*ADJ
 datasub$Estimate[datasub$Estimate<=log(YMIN)] <- log(YMIN)+log(YMIN)*ADJ
 datasub$Estimate[datasub$Estimate>=log(YMAX)] <- log(YMAX)-log(YMAX)*ADJ
 
+
 #### X-axis ####
 
 # IMPORTANT the x-axis is defined by the number of metabolic biomarkers. This number is currently 139 derived from id_name_s. 
@@ -764,10 +404,10 @@ labs1 <- Blood_Marker_Index$Short_name
 # 2. For this document, we have named the output file "foo.png".
 setwd(path)
 
-
+output_format <- "SVG"
 # 1.
 if (output_format == "PNG") {
-  png(paste(path, file.out, date, ".png", sep=""), height=6000, width=6000, bg = "white")
+  png(paste(path, file.out, date, ".png", sep=""), height=6000, width=6000, bg = "transparent")
   CEX <- 9
   lwd <- 1.5
 } else if (output_format == "SVG") {
@@ -817,7 +457,7 @@ par(xpd = NA, oma = rep(60,4))
 circos.par("track.height" = 0.6, 
            cell.padding = c(0, 0, 0, 0),
            gap.degree = 90,
-           start.degree = 91,
+           start.degree = 90,
            unit.circle.segments=50000,
            points.overflow.warning=FALSE)
 
@@ -894,8 +534,7 @@ circos.track(track.index = 1, bg.border = "white", factors = fact, ylim = YLIM, 
   circos.segments(x0=min(XLIM)-.75, y0=0, x1=max(XLIM)+0.5, y1=0, col = "black", lwd=lwd)
   circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[2]), x1=max(XLIM)+0.5, y1=(YCUTS[2]), col = "gray75", lwd=lwd)
   circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[4]), x1=max(XLIM)+0.5, y1=(YCUTS[4]), col = "gray75", lwd=lwd)
-  #circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[5]), x1=max(XLIM)+0.5, y1=(YCUTS[5]), col = "gray75", lwd=lwd)
-  #circos.segments(x0=min(XLIM)-.75, y0=(YCUTS[6]), x1=max(XLIM)+0.5, y1=(YCUTS[6]), col = "gray75", lwd=lwd)
+  
   
   
   
@@ -976,7 +615,7 @@ circos.rect(
 if (length(control) ==1){
   text(0, 0, paste(control, "\n±\n", DOI, sep=""), cex = CEX*1.1, font=2)
 } else{
-  text(0, 0, paste("BTD \n CLD \ Cholelithiasis", "\n±\n", DOI, sep=""), cex = CEX*1.1, font=2)
+  text(0, 0, paste("Blood Samples","\n","Patients at Risk", "\n±\n", DOI, sep=""), cex = CEX*1.1, font=2)
 }
 dev.off()  # Close the plotting device with dev.off().
 circos.clear()   # Use circos.clear to reset the circular layout parameters.
@@ -989,7 +628,6 @@ circos.clear()   # Use circos.clear to reset the circular layout parameters.
 
 ## 2
 ```
+
 ```
-
-
 
